-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Database Integration and Observability
-
Fully Compatible
-
ALL
-
0
-
None
-
None
-
None
-
None
-
None
-
None
-
None
See linked BF for repro and details. This is a query stats re-parse error that came out of SERVER-114341 which enabled collecting query stats on shard servers. The failure came out of a patch, but we will see it eventually in the waterfall.
- is related to
-
SERVER-114341 Query Stats not being recorded on shard servers
-
- Closed
-