SERVER-117156 Avoid validating $planCacheStats allHosts field when reparsing for query stats (#46390)

GitOrigin-RevId: 5a934eea631884676ed5433efca94bee6130eca8